--- a/Understanding_Class_OOP_Concept.ipynb
+++ b/Understanding_Class_OOP_Concept.ipynb
@@ -1,6 +1,20 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# OOP Concept in Python\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        " A **Class** is a blueprint or a template for creating objects. Objects are instances of a class, and a class defines the properties (attributes) and behaviors (methods) that the objects created from it will have. Classes are a fundamental concept in object-oriented programming (OOP), which is a programming paradigm that uses the concept of \"objects\" to organize and structure code."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
