--- a/Understanding_Class_OOP_Concept.ipynb
+++ b/Understanding_Class_OOP_Concept.ipynb
@@ -432,7 +432,7 @@
         }
       ],
       "source": [
-        "print(book2.__secret) # this shows error"
+        "print(book2.__secret) # this shows an error"
       ]
     },
     {
