--- a/Understanding_Class_OOP_Concept.ipynb
+++ b/Understanding_Class_OOP_Concept.ipynb
@@ -821,6 +821,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Inheritance is a feature of OOP that allows a class to inherit attributes and methods from another class.\n",
+        "- It promotes code reuse and establishes a hierarchical relationship between classes."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
