--- a/Understanding_Class_OOP_Concept.ipynb
+++ b/Understanding_Class_OOP_Concept.ipynb
@@ -912,6 +912,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- Abstraction in programming refers to the process of simplifying complex systems by focusing on essential features while hiding unnecessary details. \n",
+        "- It involves creating models (typically through classes and objects in object-oriented programming) that represent real-world entities or concepts in a simplified and manageable way. \n",
+        "- Abstraction allows developers to work with a high-level overview without being concerned with every intricate detail of the underlying implementation."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
