--- a/Understanding_Class_OOP_Concept.ipynb
+++ b/Understanding_Class_OOP_Concept.ipynb
@@ -1023,6 +1023,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- With multiple inheritance, a class can inherit from more than one parent class.\n",
+        "- This allows the derived class to have a combination of attributes and behaviors from multiple parent classes."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
