--- a/Understanding_Class_OOP_Concept.ipynb
+++ b/Understanding_Class_OOP_Concept.ipynb
@@ -11,7 +11,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        " A **Class** is a blueprint or a template for creating objects. Objects are instances of a class, and a class defines the properties (attributes) and behaviors (methods) that the objects created from it will have. Classes are a fundamental concept in object-oriented programming (OOP), which is a programming paradigm that uses the concept of \"objects\" to organize and structure code."
+        " - A **Class** is a blueprint or a template for creating objects. \n",
+        " - **Objects** are instances of a class, and a class defines the properties (attributes) and behaviors (methods) that the objects created from it will have. \n",
+        " - Classes are a fundamental concept in object-oriented programming (OOP), which is a programming paradigm that uses the concept of \"objects\" to organize and structure code."
       ]
     },
     {
