--- a/Understanding_Class_OOP_Concept.ipynb
+++ b/Understanding_Class_OOP_Concept.ipynb
@@ -1100,6 +1100,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        " - An interface is a contract that defines a set of methods (and possibly properties) that a class must implement. It declares the expected behavior without providing the implementation details. \n",
+        " - Classes that implement an interface must adhere to the defined contract by providing concrete implementations for the specified methods."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1175,6 +1183,15 @@
       },
       "source": [
         "## Composition"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- A way of creating complex structures or objects by combining simpler ones. \n",
+        "- It involves forming relationships between objects where one object contains or is composed of others. \n",
+        "- This approach promotes code organization, reusability, and flexibility, allowing developers to build modular and maintainable software."
       ]
     },
     {
@@ -1274,15 +1291,6 @@
         "**Reference :**\n",
         "[LinkedIn Learning](https://www.linkedin.com/learning/python-object-oriented-programming-22888296/python-object-oriented-programming?u=2148769)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WEtCt6N2OvD1"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
